--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     ></script>
     
-    <script src="script.js"></script>
+    
     <script
       src="https://kit.fontawesome.com/2627dccc6c.js"
       crossorigin="anonymous"
@@ -36,9 +36,9 @@
       </div>
     </nav>
     <div class="container">
-      <form id="from">
+      <form id="form">
         <input type="text" placeholder="City name" id="city"/>
-        <button class="button-1" type="submit" id="submit">Submit</button>
+        <button class="button-1" id="submit">Submit</button>
       </form>
     </div>
     <div class="data-center">
@@ -202,5 +202,6 @@
         </div>
       </div>
     </div> -->
+        <script src="script.js"></script>
   </body>
 </html>
